fix(posts): fix embedded images being too large

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -21,7 +21,7 @@
   background: #f0ad4e;
 }
 
-.panel .img {
+.panel img {
   max-width: 100%;
 }
 
